--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,7 +14,7 @@
 
 $primary   : #0075bf;
 $secondary : #26A69A;
-$accent    : #9C27B0;
+$accent    : #0075bf;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
